--- a/F1Modeling/f1_doc.ipynb
+++ b/F1Modeling/f1_doc.ipynb
@@ -5,7 +5,7 @@
    "id": "e5f429d1",
    "metadata": {},
    "source": [
-    "# F1Modeling"
+    "# Documentación F1Modeling "
    ]
   },
   {
@@ -26,11 +26,11 @@
     "4. **Módulo de pruebas F1Testing:**  \n",
     "    Encargado de las pruebas unitarias de la aplicación.\n",
     "\n",
-    "5. **Módulo de Integración F1GraphsAPI:**  \n",
-    "    Permite la integración con otros sistemas o la extensión de funcionalidades mediante una API.\n",
+    "5. **Módulo de Integración F1GraphsAPI (Pendiente por desarrollar):**  \n",
+    "    Permitirá la integración con otros sistemas o la extensión de funcionalidades mediante una API.\n",
     "\n",
-    "El flujo general es:  \n",
-    "Usuario → F1Graphs → F1Simulation → F1Testing → F1GraphsAPI → Usuario\n",
+    "El flujo simplificado es:  \n",
+    "Usuario → f1_main.py → F1Graphs → F1Data → F1Graphs → F1Simulation → f1_main.py → Usuario\n",
     "\n",
     "Esta arquitectura modular facilita la escalabilidad, el mantenimiento y la incorporación de nuevas funcionalidades y modelos."
    ]
